data archival application/objects/Data_Archival_Object_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Archival_From_Date__c</fullName>
        <label>Archival From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Archival_To_Date__c</fullName>
        <label>Archival To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FilterField_1__c</fullName>
        <label>FilterField 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilterField_2__c</fullName>
        <label>FilterField 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Level__c</fullName>
        <label>Hierarchy Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_type__c</fullName>
        <label>Object type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Setting_Name__c</fullName>
        <label>Parent Setting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Submitted&apos;</defaultValue>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <defaultValue>$User.Id</defaultValue>
        <label>Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filterValue_1__c</fullName>
        <label>filterValue 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filterValue_2__c</fullName>
        <label>filterValue 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationship_field__c</fullName>
        <label>relationship field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Archival Object Settings</label>
</CustomObject>